Redo panel doesn't appear for spin operator #103587

Closed
opened 2023-01-01 14:22:03 +01:00 by Mishel · 12 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce GTX 1650

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-29 21:40, hash: c8741a3c03, type: release
Worked: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-20 08:50, hash: ef9ca44dee, type: release
Caused by f68e50a263

Short description of error
Redo panel doesn't appear if spin operator is used with gizmo

Exact steps for others to reproduce the error

  • Open default scene
  • Edit mode
  • Vertex select (or edge, face)
  • select Spin from toolbar
  • access it through gizmo
    The menu Spin appears in this 3.4.1 version. No menu Spin appears in this 3.5.0 Alpha version.

Screen-0001.PNG

Spin.gif

If I press f9 after spinning in version 3.5.0, the spin menu appears

Spin-f9.gif

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce GTX 1650 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-29 21:40, hash: c8741a3c0336, type: release Worked: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-20 08:50, hash: ef9ca44dee7f, type: release Caused by f68e50a263 **Short description of error** Redo panel doesn't appear if spin operator is used with gizmo **Exact steps for others to reproduce the error** - Open default scene - Edit mode - Vertex select (or edge, face) - select Spin from toolbar - access it through gizmo The menu Spin appears in this 3.4.1 version. No menu Spin appears in this 3.5.0 Alpha version. ![Screen-0001.PNG](https://archive.blender.org/developer/F14104234/Screen-0001.PNG) ![Spin.gif](https://archive.blender.org/developer/F14104248/Spin.gif) If I press f9 after spinning in version 3.5.0, the spin menu appears ![Spin-f9.gif](https://archive.blender.org/developer/F14104360/Spin-f9.gif)
Author

Added subscriber: @Mishel-3

Added subscriber: @Mishel-3
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Contributor

I can confirm this on : 3.5.0 Alpha, branch: master, commit date: 2022-12-31 15:26, hash: 614704f90c
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
the Adjust Last Operation panel is not showing up.

I can confirm this on : 3.5.0 Alpha, branch: master, commit date: 2022-12-31 15:26, hash: `614704f90c` Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits the Adjust Last Operation panel is not showing up.
Contributor
After a bisect, [f68e50a263b8a970075c8fd540a985f2798e1d13 ](https://developer.blender.org/rBf68e50a263b8a970075c8fd540a985f2798e1d13) seems to be the first bad commit. [D16523: WM: operators that add their own undo pushes now clears the redo panel](https://archive.blender.org/developer/D16523)
Pratik Borhade changed title from The Spin menu does not appear (bottom left corner) in 3.5.0 Alpha to Redo panel doesn't appear for spin operator 2023-01-02 04:42:11 +01:00
Member

Added subscribers: @ideasman42, @PratikPB2123

Added subscribers: @ideasman42, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
cc @ideasman42

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Added subscriber: @beco

Added subscriber: @beco
Contributor

Hey can this become a classified bug so it's not in the backlog ...

Hey can this become a classified bug so it's not in the backlog ...
Campbell Barton self-assigned this 2023-01-23 10:39:35 +01:00

This issue was referenced by c1beaea80f

This issue was referenced by c1beaea80f97026442a2b81e51ea80ce9dfc492d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Core project 2023-02-09 15:43:46 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103587
No description provided.